Làm nút cuộn lên đầu trang

--- a/index.html
+++ b/index.html
@@ -858,6 +858,9 @@
                     </div>
                 </div>
             </article>
+            <button id="scrollToTopBtn" class="hidden">
+                <i class="fa-regular fa-hand-point-up"></i>
+            </button>
         </main>
         <script
             src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
