update phần con chuột custom

--- a/index.html
+++ b/index.html
@@ -233,13 +233,7 @@
             <div class="container banner-container">
                 <div class="row">
                     <div class="col-12 col-lg-12 col-md-12 col-sm-12">
-                        <video
-                            class="myVideo"
-                            preload="auto"
-                            loop
-                            muted
-                            autoplay
-                        >
+                        <video class="myVideo" preload="auto" loop muted>
                             <source
                                 src="./assets/videos/bannerstm.mp4"
                                 type="video/mp4"
@@ -913,6 +907,8 @@
                 <input hidden type="checkbox" id="switch" />
                 <label for="switch" class="btnDarkMode"> </label>
             </div>
+            <!-- Cursor -->
+            <div class="cursor"></div>
 
             <!-- Decor -->
             <section class="decor" id="decor">
