--- a/index.html
+++ b/index.html
@@ -233,7 +233,13 @@
             <div class="container banner-container">
                 <div class="row">
                     <div class="col-12 col-lg-12 col-md-12 col-sm-12">
-                        <video class="myVideo" preload="auto" loop muted>
+                        <video
+                            class="myVideo"
+                            preload="auto"
+                            loop
+                            muted
+                            autoplay
+                        >
                             <source
                                 src="./assets/videos/bannerstm.mp4"
                                 type="video/mp4"
